Added Views Repetitive Attributes to Themes

--- a/app/src/main/res/layout-land/fragment_change_password.xml
+++ b/app/src/main/res/layout-land/fragment_change_password.xml
@@ -47,20 +47,12 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_title_current_password"
-                android:layout_width="@dimen/width_0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_52dp"
+                style="@style/Theme.FifaUltimateTeamCoin.TextInputLayout.Title"
                 android:layout_marginTop="@dimen/margin_24dp"
-                android:fontFamily="@font/localized_bold"
-                android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_current_password"
-                android:maxLines="1"
                 android:text="@string/change_password_title_current_password"
-                android:textAlignment="gravity"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/ti_layout_current_password"
+                app:layout_constraintStart_toStartOf="@id/ti_layout_current_password"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -92,20 +84,12 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_title_new_password"
-                android:layout_width="@dimen/width_0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_52dp"
+                style="@style/Theme.FifaUltimateTeamCoin.TextInputLayout.Title"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/localized_bold"
-                android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_new_password"
-                android:maxLines="1"
                 android:text="@string/change_password_title_new_password"
-                android:textAlignment="gravity"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/ti_layout_new_password"
+                app:layout_constraintStart_toStartOf="@id/ti_layout_new_password"
                 app:layout_constraintTop_toBottomOf="@+id/ti_layout_current_password" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -137,20 +121,12 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_title_confirm_new_password"
-                android:layout_width="@dimen/width_0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_52dp"
+                style="@style/Theme.FifaUltimateTeamCoin.TextInputLayout.Title"
                 android:layout_marginTop="@dimen/margin_16dp"
-                android:fontFamily="@font/localized_bold"
-                android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_confirm_new_password"
-                android:maxLines="1"
                 android:text="@string/change_password_title_confirm_new_password"
-                android:textAlignment="gravity"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/ti_layout_confirm_new_password"
+                app:layout_constraintStart_toStartOf="@id/ti_layout_confirm_new_password"
                 app:layout_constraintTop_toBottomOf="@+id/ti_layout_new_password" />
 
             <com.google.android.material.textfield.TextInputLayout
