--- a/app/src/main/res/layout/fragment_forgot_pw.xml
+++ b/app/src/main/res/layout/fragment_forgot_pw.xml
@@ -33,18 +33,10 @@
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/tv_title_email"
-            android:layout_width="@dimen/width_0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_8dp"
+            style="@style/Theme.FifaUltimateTeamCoin.TextInputLayout.Title"
             android:layout_marginTop="@dimen/margin_44dp"
-            android:fontFamily="@font/localized_bold"
-            android:gravity="start|center_vertical"
             android:labelFor="@+id/ti_layout_email"
-            android:maxLines="1"
             android:text="@string/forgot_pw_title_email"
-            android:textAlignment="gravity"
-            android:textColor="@color/black"
-            android:textSize="@dimen/text_size_14sp"
             app:layout_constraintBottom_toTopOf="@+id/ti_layout_email"
             app:layout_constraintEnd_toEndOf="@id/ti_layout_email"
             app:layout_constraintStart_toStartOf="@id/ti_layout_email"
