--- a/app/src/main/res/layout/fragment_change_email.xml
+++ b/app/src/main/res/layout/fragment_change_email.xml
@@ -45,20 +45,12 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_title_password"
-                android:layout_width="@dimen/width_0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_32dp"
+                style="@style/Theme.FifaUltimateTeamCoin.TextInputLayout.Title"
                 android:layout_marginTop="@dimen/margin_8dp"
-                android:fontFamily="@font/localized_bold"
-                android:gravity="start|center_vertical"
                 android:labelFor="@+id/ti_layout_password"
-                android:maxLines="1"
                 android:text="@string/change_email_title_password"
-                android:textAlignment="gravity"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/ti_layout_password"
+                app:layout_constraintStart_toStartOf="@id/ti_layout_password"
                 app:layout_constraintTop_toBottomOf="@+id/lav_keyboard" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -90,20 +82,12 @@
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_title_new_email"
-                android:layout_width="@dimen/width_0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="@dimen/margin_32dp"
-                android:layout_marginTop="@dimen/margin_8dp"
-                android:fontFamily="@font/localized_bold"
-                android:gravity="start|center_vertical"
+                style="@style/Theme.FifaUltimateTeamCoin.TextInputLayout.Title"
+                android:layout_marginTop="@dimen/margin_16dp"
                 android:labelFor="@+id/ti_layout_new_email"
-                android:maxLines="1"
                 android:text="@string/change_email_title_new_email"
-                android:textAlignment="gravity"
-                android:textColor="@color/black"
-                android:textSize="@dimen/text_size_14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/ti_layout_new_email"
+                app:layout_constraintStart_toStartOf="@id/ti_layout_new_email"
                 app:layout_constraintTop_toBottomOf="@+id/ti_layout_password" />
 
             <com.google.android.material.textfield.TextInputLayout
