--- a/app/src/main/res/layout-land/fragment_auth.xml
+++ b/app/src/main/res/layout-land/fragment_auth.xml
@@ -6,7 +6,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:animateLayoutChanges="true">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
