--- a/app/src/main/res/navigation/nav_graph_landing.xml
+++ b/app/src/main/res/navigation/nav_graph_landing.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/onBoardingFragment"
-        android:name="com.xeniac.warrantyroster_manager.ui.fragments.onboarding.OnBoardingFragment"
+        android:name="com.xeniac.warrantyroster_manager.onboarding.presentation.onboarding.OnBoardingFragment"
         android:label="OnBoardingFragment"
         tools:layout="@layout/fragment_onboarding">
         <action
