--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -54,7 +54,7 @@
         tools:layout="@layout/fragment_warranty_details">
         <argument
             android:name="warranty"
-            app:argType="com.xeniac.warrantyroster_manager.warranty_management.data.remote.dto.Warranty"
+            app:argType="com.xeniac.warrantyroster_manager.warranty_management.domain.model.Warranty"
             app:nullable="false" />
         <action
             android:id="@+id/action_warrantyDetailsFragment_to_editWarrantyFragment"
@@ -88,7 +88,7 @@
         tools:layout="@layout/fragment_edit_warranty">
         <argument
             android:name="warranty"
-            app:argType="com.xeniac.warrantyroster_manager.warranty_management.data.remote.dto.Warranty"
+            app:argType="com.xeniac.warrantyroster_manager.warranty_management.domain.model.Warranty"
             app:nullable="false" />
         <action
             android:id="@+id/action_editWarrantyFragment_to_warrantyDetailsFragment"
