--- a/app/src/main/res/layout/fragment_onboarding.xml
+++ b/app/src/main/res/layout/fragment_onboarding.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_language_flag"
+            android:id="@+id/iv_locale_flag"
             android:layout_width="@dimen/width_24dp"
             android:layout_height="@dimen/height_24dp"
             android:layout_margin="@dimen/margin_3dp"
