--- a/app/src/main/res/layout/fragment_onboarding_3rd.xml
+++ b/app/src/main/res/layout/fragment_onboarding_3rd.xml
@@ -29,27 +29,27 @@
         android:textAlignment="gravity"
         android:textColor="@color/skyBlueStatic"
         android:textSize="@dimen/text_size_24sp"
-        app:layout_constraintBottom_toTopOf="@id/btn_next"
+        app:layout_constraintBottom_toTopOf="@id/btn_onboarding_3rd_next"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_header"
         tools:targetApi="p" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_back"
+        android:id="@+id/btn_onboarding_3rd_back"
         style="@style/Theme.WarrantyRoster.TextButton.OnBoarding"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_24dp"
         android:layout_marginEnd="@dimen/margin_2dp"
         android:text="@string/onboarding_btn_back"
-        app:layout_constraintBaseline_toBaselineOf="@+id/btn_next"
-        app:layout_constraintEnd_toStartOf="@+id/btn_next"
+        app:layout_constraintBaseline_toBaselineOf="@+id/btn_onboarding_3rd_next"
+        app:layout_constraintEnd_toStartOf="@+id/btn_onboarding_3rd_next"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_next"
+        android:id="@+id/btn_onboarding_3rd_next"
         style="@style/Theme.WarrantyRoster.Button"
         android:layout_width="@dimen/width_114dp"
         android:layout_height="wrap_content"
@@ -60,6 +60,6 @@
         android:text="@string/onboarding_btn_next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn_back" />
+        app:layout_constraintStart_toEndOf="@+id/btn_onboarding_3rd_back" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
