--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -243,7 +243,7 @@
             android:id="@+id/btn_google"
             style="@style/Theme.WarrantyRoster.Button.Outlined"
             android:layout_width="@dimen/width_0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/height_64dp"
             android:layout_marginStart="@dimen/margin_24dp"
             android:layout_marginTop="@dimen/margin_18dp"
             android:layout_marginBottom="@dimen/margin_19dp"
@@ -274,7 +274,7 @@
             android:id="@+id/btn_twitter"
             style="@style/Theme.WarrantyRoster.Button.Outlined"
             android:layout_width="@dimen/width_0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/height_64dp"
             android:layout_marginHorizontal="@dimen/margin_24dp"
             app:icon="@drawable/ic_auth_twitter"
             app:iconGravity="textStart"
@@ -302,7 +302,7 @@
             android:id="@+id/btn_facebook"
             style="@style/Theme.WarrantyRoster.Button.Outlined"
             android:layout_width="@dimen/width_0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/height_64dp"
             android:layout_marginEnd="@dimen/margin_24dp"
             app:icon="@drawable/ic_auth_facebook"
             app:iconGravity="textStart"
